Course mall final project

--- a/Java/Class_Projects/COURSE_MALL_PROJECT/coursemall/src/main/resources/application.properties
+++ b/Java/Class_Projects/COURSE_MALL_PROJECT/coursemall/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=false
+spring.jpa.defer-datasource-initialization = true
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:course-mall-db
+spring.datasource.username=h2
+spring.datasource.password=h2
+spring.datasource.initialization-mode=always
+
+spring.h2.console.enabled=true  
+spring.h2.console.settings.web-allow-others=true
+
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
 
